fix(message): changed date text alignment to be mobile first

--- a/src/components/messages/PeerAndMessage/PeerAndMessage.scss
+++ b/src/components/messages/PeerAndMessage/PeerAndMessage.scss
@@ -13,12 +13,12 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    max-width: 15em;
+    max-width: none;
   }
 
   &__text {
-    @media screen and (max-width: 700px) {
-      max-width: none;
+    @media screen and (min-width: 700px) {
+      max-width: 15em;
     }
   }
 
